--- a/MyResume/index.html
+++ b/MyResume/index.html
@@ -85,45 +85,43 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>About</h2>
-        <p> Hi! I’m a Computer Science student from the Philippines who’s curious about how technology and creativity can work together. 
-              My interests range from coding projects and classwork to hobbies like design, sewing, and 3D modeling.
-            </p>
+        <p>Hi! I'm a Computer Science student from the Philippines who's curious about how technology and creativity can work together. 
+           My interests range from coding projects and classwork to hobbies like design, sewing, and 3D modeling.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
-
-        <div class="row gy-4 justify-content-center">
-          <div class="col-lg-4">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+        <div class="row gy-4 justify-content-center align-items-center">
+          <div class="col-lg-5 text-center">
+            <img src="assets/img/profile.png" class="img-fluid rounded" alt="Profile Picture" style="max-height: 400px; width: auto;">
           </div>
-          <div class="col-lg-8 content">
-            <h2>Student Developer & Creative Explorer</h2>
-            
-            <div class="row">
-              <div class="col-lg-6">
-                <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>November 7 2004</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>Coming Soon</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+63 949 551 1111</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Iloilo, Philippines</span></li>
-                </ul>
+          <div class="col-lg-7">
+            <div class="content ps-lg-4 text-start">
+              <h3 class="mb-4">Student Developer & Creative Explorer</h3>
+              <div class="row mt-4">
+                <div class="col-md-6">
+                  <ul class="list-unstyled">
+                    <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>November 7 2004</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>Coming Soon</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+63 949 551 1111</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Iloilo, Philippines</span></li>
+                  </ul>
+                </div>
+                <div class="col-md-6">
+                  <ul class="list-unstyled">
+                    <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>20</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>BS Computer Science</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>rielledorado@gmail.com</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
+                  </ul>
+                </div>
               </div>
-              <div class="col-lg-6">
-                <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>20</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>BS Computer Science (Under Construction)</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>rielledorado@gmail.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
-                </ul>
-              </div>
+              <p class="py-3">
+                I'm still in the process of discovering where I want to specialize, but I'm passionate about learning new skills, 
+                building meaningful projects, and exploring opportunities that help me grow as a future tech professional.
+              </p>
             </div>
-            <p class="py-3">
-            I’m still in the process of discovering where I want to specialize, but I’m passionate about learning new skills, 
-            building meaningful projects, and exploring opportunities that help me grow as a future tech professional.
-            </p>
           </div>
         </div>
-
       </div>
 
     </section><!-- /About Section -->
