--- a/MyResume/index.html
+++ b/MyResume/index.html
@@ -3,7 +3,17 @@
 
 <head>
   <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
+  <!-- Add this style in the head section -->
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      overflow-x: hidden;
+    }
+  </style>
+
   <title>Index - MyResume Bootstrap Template</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
@@ -55,30 +65,44 @@
       </ul>
     </nav>
 
+    <!-- Add this after your navigation menu -->
+    <div class="theme-toggle">
+      <button id="theme-toggle" class="btn btn-link">
+        <i class="bi bi-sun-fill light-icon"></i>
+        <i class="bi bi-moon-fill dark-icon"></i>
+      </button>
+    </div>
+
   </header>
 
   <main class="main">
 
     <!-- Hero Section -->
-    <section id="hero" class="hero section light-background">
-
-      <img src="assets/img/hero.jpg" alt="">
-
-      <div class="container" data-aos="zoom-out">
-        <div class="row justify-content-center">
-          <div class="col-lg-9">
-            <h2>Louise Marielle Dorado</h2>
-            <p>I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer, Entrepreneur">Designer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
-            <div class="social-links">
-              <a href="#"><i class="bi bi-twitter-x"></i></a>
-              <a href="#"><i class="bi bi-facebook"></i></a>
-              <a href="#"><i class="bi bi-instagram"></i></a>
-              <a href="#"><i class="bi bi-linkedin"></i></a>
+    <section id="hero" class="hero">
+      <div class="hero-bg"></div>
+      <div class="container h-100">
+        <div class="row h-100 align-items-center justify-content-center">
+          <div class="col-lg-8">
+            <div class="hero-content text-center">
+              <span class="hero-subtitle" data-aos="fade-up">Hello, I'm</span>
+              <h1 class="hero-title" data-aos="fade-up" data-aos-delay="100">Louise Marielle Dorado</h1>
+              <div class="hero-text" data-aos="fade-up" data-aos-delay="200">
+                <p>I'm a <span class="typed" data-typed-items="Student Developer, Creative Explorer, Future Innovator, Tech Enthusiast"></span></p>
+              </div>
+              <div class="hero-buttons" data-aos="fade-up" data-aos-delay="300">
+                <a href="#contact" class="btn btn-primary">Let's Connect</a>
+                <a href="#about" class="btn btn-outline">Learn More</a>
+              </div>
+              <div class="social-links" data-aos="fade-up" data-aos-delay="400">
+                <a href="#" class="social-icon"><i class="bi bi-github"></i></a>
+                <a href="#" class="social-icon"><i class="bi bi-linkedin"></i></a>
+                <a href="#" class="social-icon"><i class="bi bi-instagram"></i></a>
+                <a href="#" class="social-icon"><i class="bi bi-facebook"></i></a>
+              </div>
             </div>
           </div>
         </div>
       </div>
-
     </section><!-- /Hero Section -->
 
     <!-- About Section -->
@@ -245,6 +269,13 @@
                 <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div><!-- End Skills Item -->
+
+            <div class="progress">
+              <span class="skill"><span>Blender 3D</span> <i class="val">75%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div><!-- End Skills Item -->
           </div>
         </div>
 
@@ -284,7 +315,14 @@
               <h5>2023 - Present</h5>
               <p><em>West Visayas State University, Iloilo, PH</em></p>
               <p>Relevant coursework: Programming Fundamentals, Data Structures, Web Development, Software Engineering.</p>
-            </div><!-- Edn Resume Item -->
+            </div><!-- End Resume Item -->
+
+            <div class="resume-item">
+              <h4>Secondary Education</h4>
+              <h5>2017 - 2023</h5>
+              <p><em>Cabatuan National Comprehensive High School, Iloilo, PH</em></p>
+              <p>Completed Junior and Senior High School with focus on STEM track.</p>
+            </div><!-- End Resume Item -->
 
 
           </div>
