--- a/MyResume/index.html
+++ b/MyResume/index.html
@@ -90,10 +90,11 @@
                 <p>I'm a <span class="typed" data-typed-items="Student Developer, Creative Explorer, Future Innovator, Tech Enthusiast"></span></p>
               </div>
               <div class="hero-buttons" data-aos="fade-up" data-aos-delay="300">
-                <a href="#contact" class="btn btn-primary">Let's Connect</a>
-                <a href="#about" class="btn btn-outline">Learn More</a>
+                <a href="#portfolio" class="btn btn-primary">My Work</a>
+                <a href="#" class="btn btn-outline">Download CV</a>
               </div>
-              <div class="social-links" data-aos="fade-up" data-aos-delay="400">
+
+              <div class="hero-social" data-aos="fade-up" data-aos-delay="400">
                 <a href="#" class="social-icon"><i class="bi bi-github"></i></a>
                 <a href="#" class="social-icon"><i class="bi bi-linkedin"></i></a>
                 <a href="#" class="social-icon"><i class="bi bi-instagram"></i></a>
