added service details for financial management

--- a/MyResume/index.html
+++ b/MyResume/index.html
@@ -388,7 +388,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Portfolio</h2>
-        <p>Here are some of my recent projects and work that showcase my skills in web development, design, and creative problem-solving.</p>
+        <p>Here are some of my recent projects and work that showcase my skills in web development, design, creative problem-solving, and robotics.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -400,16 +400,68 @@
             <li data-filter=".filter-app">App</li>
             <li data-filter=".filter-product">Design</li>
             <li data-filter=".filter-branding">Web</li>
+            <li data-filter=".filter-robotics">Robotics</li>
           </ul><!-- End Portfolio Filters -->
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <img src="assets/img/masonry-portfolio/masonry-portfolio-1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/masonry-portfolio/tuonta.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Tuon Ta App</h4>
                 <p>Educational game development</p>
                 <a href="assets/img/masonry-portfolio/masonry-portfolio-1.jpg" title="Tuon Ta App" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+              <img src="assets/img/masonry-portfolio/dal-ani.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Innovation Olympics</h4>
+                <p>Hackathon project presentation</p>
+                <a href="assets/img/masonry-portfolio/dal-ani.jpg" title="Innovation Olympics" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
+              <img src="assets/img/masonry-portfolio/blender.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>3D Modeling</h4>
+                <p>Blender artwork</p>
+                <a href="assets/img/masonry-portfolio/blender.png" title="3D Modeling" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <!-- Robotics Items -->
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-robotics">
+              <img src="assets/img/masonry-portfolio/roboticarm.jpg" class="img-fluid" alt="Robotic Arm">
+              <div class="portfolio-info">
+                <h4>Robotic Arm</h4>
+                <p>Arduino-controlled 6-axis robotic arm with precision movement</p>
+                <a href="assets/img/masonry-portfolio/roboticarm.jpg" title="Robotic Arm" data-gallery="portfolio-gallery-robotics" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-robotics">
+              <img src="assets/img/masonry-portfolio/rover.jpg" class="img-fluid" alt="Rover">
+              <div class="portfolio-info">
+                <h4>Exploration Rover</h4>
+                <p>Remote-controlled autonomous rover with camera navigation</p>
+                <a href="assets/img/masonry-portfolio/rover.jpg" title="Exploration Rover" data-gallery="portfolio-gallery-robotics" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
+              <img src="assets/img/masonry-portfolio/masonry-portfolio-6.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Organization Website</h4>
+                <p>Student organization web design</p>
+                <a href="assets/img/masonry-portfolio/masonry-portfolio-6.jpg" title="Organization Website" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
@@ -425,41 +477,21 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
-              <img src="assets/img/masonry-portfolio/masonry-portfolio-3.jpg" class="img-fluid" alt="">
+              <img src="assets/img/masonry-portfolio/grove.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Web Development</h4>
                 <p>Responsive website creation</p>
-                <a href="assets/img/masonry-portfolio/masonry-portfolio-3.jpg" title="Web Development" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="assets/img/masonry-portfolio/grove.png" title="Web Development" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <img src="assets/img/masonry-portfolio/masonry-portfolio-4.jpg" class="img-fluid" alt="">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-robotics">
+              <img src="https://images.unsplash.com/photo-1558618666-fcd25c85cd64?w=400&h=300&fit=crop" class="img-fluid" alt="Automated Cleaning Vacuum">
               <div class="portfolio-info">
-                <h4>Innovation Olympics</h4>
-                <p>Hackathon project presentation</p>
-                <a href="assets/img/masonry-portfolio/masonry-portfolio-4.jpg" title="Innovation Olympics" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-              </div>
-            </div><!-- End Portfolio Item -->
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
-              <img src="assets/img/masonry-portfolio/masonry-portfolio-5.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>3D Modeling</h4>
-                <p>Blender artwork</p>
-                <a href="assets/img/masonry-portfolio/masonry-portfolio-5.jpg" title="3D Modeling" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-              </div>
-            </div><!-- End Portfolio Item -->
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
-              <img src="assets/img/masonry-portfolio/masonry-portfolio-6.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Organization Website</h4>
-                <p>Student organization web design</p>
-                <a href="assets/img/masonry-portfolio/masonry-portfolio-6.jpg" title="Organization Website" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <h4>Automated Cleaning Vacuum</h4>
+                <p>Smart vacuum robot with mapping and obstacle avoidance</p>
+                <a href="https://images.unsplash.com/photo-1558618666-fcd25c85cd64?w=400&h=300&fit=crop" title="Automated Cleaning Vacuum" data-gallery="portfolio-gallery-robotics" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
@@ -567,7 +599,7 @@
                 </svg>
                 <i class="bi bi-calculator"></i>
               </div>
-              <a href="#" class="stretched-link">
+              <a href="service-details.html" class="stretched-link">
                 <h3>Financial Management</h3>
               </a>
               <p>Skilled in budgeting, record-keeping, and managing organizational funds from student leadership roles.</p>
