--- a/MyResume/portfolio-details.html
+++ b/MyResume/portfolio-details.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Portfolio Details - MyResume Bootstrap Template</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <title>Dal-Ani - Innovation Olympics Portfolio Details</title>
+  <meta content="Smart cooler IoT project from Innovation Olympics hackathon" name="description">
+  <meta content="Dal-Ani, Innovation Olympics, IoT, Smart Cooler, Hackathon" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -26,14 +26,6 @@
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
-
-  <!-- =======================================================
-  * Template Name: MyResume
-  * Template URL: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/
-  * Updated: Jun 29 2024 with Bootstrap v5.3.3
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body class="portfolio-details-page">
@@ -44,12 +36,13 @@
 
     <nav id="navmenu" class="navmenu">
       <ul>
-        <li><a href="#hero"><i class="bi bi-house navicon"></i><span>Home</span></a></li>
-        <li><a href="#about"><i class="bi bi-person navicon"></i><span>About</span></a></li>
-        <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i><span>Resume</span></a></li>
-        <li><a href="#portfolio"><i class="bi bi-images navicon"></i><span>Portfolio</span></a></li>
-        <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i><span>Services</span></a></li>
-        <li><a href="#contact"><i class="bi bi-envelope navicon"></i><span>Contact</span></a></li>
+        <li><a href="index.html#hero"><i class="bi bi-house navicon"></i><span>Home</span></a></li>
+        <li><a href="index.html#about"><i class="bi bi-person navicon"></i><span>About</span></a></li>
+        <li><a href="index.html#resume"><i class="bi bi-file-earmark-text navicon"></i><span>Resume</span></a></li>
+        <li><a href="index.html#portfolio" class="active"><i class="bi bi-images navicon"></i><span>Portfolio</span></a>
+        </li>
+        <li><a href="index.html#services"><i class="bi bi-hdd-stack navicon"></i><span>Services</span></a></li>
+        <li><a href="index.html#contact"><i class="bi bi-envelope navicon"></i><span>Contact</span></a></li>
       </ul>
     </nav>
 
@@ -66,7 +59,7 @@
             <li class="current">Portfolio Details</li>
           </ol>
         </nav>
-        <h1>Portfolio Details</h1>
+        <h1>Dal-Ani - Innovation Olympics</h1>
       </div>
     </div><!-- End Page Title -->
 
@@ -98,19 +91,15 @@
           <div class="swiper-wrapper align-items-center">
 
             <div class="swiper-slide">
-              <img src="assets/img/portfolio/app-1.jpg" alt="">
+              <img src="assets/img/masonry-portfolio/dal-ani.jpg" alt="Dal-Ani App Interface">
             </div>
 
             <div class="swiper-slide">
-              <img src="assets/img/portfolio/product-1.jpg" alt="">
+              <img src="assets/img/masonry-portfolio/homedal-ani.jpg" alt="Dal-Ani Smart Cooler">
             </div>
 
             <div class="swiper-slide">
-              <img src="assets/img/portfolio/branding-1.jpg" alt="">
-            </div>
-
-            <div class="swiper-slide">
-              <img src="assets/img/portfolio/books-1.jpg" alt="">
+              <img src="assets/img/masonry-portfolio/dal-ani-3.jpg" alt="Dal-Ani Team Presentation">
             </div>
 
           </div>
@@ -123,33 +112,69 @@
 
           <div class="col-lg-8" data-aos="fade-up">
             <div class="portfolio-description">
-              <h2>This is an example of portfolio details</h2>
+              <h2>Dal-Ani: Smart Cooler Innovation</h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
-              </p>
-              <p>
-                Amet consequatur qui dolore veniam voluptatem voluptatem sit. Non aspernatur atque natus ut cum nam et. Praesentium error dolores rerum minus sequi quia veritatis eum. Eos et doloribus doloremque nesciunt molestiae laboriosam.
+                Dal-Ani is our innovative smart cooler project developed during the Innovation Olympics hackathon. This IoT-powered device revolutionizes produce storage by intelligently optimizing temperature and humidity while minimizing food waste through smart monitoring and user-friendly mobile application.
               </p>
 
-              <div class="testimonial-item">
-                <p>
-                  <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.</span>
-                  <i class="bi bi-quote quote-icon-right"></i>
-                </p>
-                <div>
-                  <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-                  <h3>Sara Wilsson</h3>
-                  <h4>Designer</h4>
-                </div>
+              <h3>Project Overview</h3>
+              <p>
+                During the intense 24-hour hackathon, our 3-person team conceptualized and developed Dal-Ani as a comprehensive solution for smart food storage. The project combines cutting-edge IoT technology with intuitive mobile design to create an intelligent companion for optimizing produce storage and minimizing waste.
+              </p>
+
+              <h3>Key Features</h3>
+              <ul>
+                <li><strong>IoT Integration:</strong> Real-time temperature and humidity monitoring with automated climate control
+                </li>
+                <li><strong>Smart Sensors:</strong> Advanced sensor array for detecting produce freshness and optimal storage
+                  conditions
+                </li>
+                <li><strong>Mobile App:</strong> Flutter-based cross-platform application for remote monitoring and control
+                </li>
+                <li><strong>Waste Reduction:</strong> Intelligent algorithms that notify users about optimal consumption timing
+                </li>
+                <li><strong>Energy Efficiency:</strong> Smart power management system that optimizes energy consumption
+                </li>
+              </ul>
+
+              <h3>Technical Challenges & Solutions</h3>
+              <p>
+                <strong>Technical Issues:</strong> We faced significant challenges with sensor calibration and IoT connectivity
+                during the hackathon. The integration between hardware sensors and the mobile application required precise
+                timing and reliable data transmission.
+              </p>
+              <p>
+                <strong>Business Challenges:</strong> Developing a viable business model within the hackathon timeframe was
+                challenging. We had to balance technical feasibility with market demands and cost-effectiveness.
+              </p>
+              <p>
+                <strong>Solutions:</strong> We implemented a modular architecture that allowed for rapid prototyping and
+                testing. Our team's diverse skills in IoT, mobile development, and business strategy enabled us to create
+                a comprehensive solution that addressed both technical and commercial aspects.
+              </p>
+
+              <h3>My Role as "Hipster"</h3>
+              <p>
+                As the "Hipster" in our team, I was responsible for user experience design, market research, and ensuring
+                our technical solution met real user needs. I focused on creating an intuitive mobile interface and
+                developing the product's value proposition for the Innovation Olympics presentation.
+              </p>
+
+              <h3>Technologies Used</h3>
+              <div class="tech-stack">
+                <span class="badge bg-primary">IoT</span>
+                <span class="badge bg-info">Flutter</span>
+                <span class="badge bg-success">Robotics</span>
+                <span class="badge bg-warning">Sensors</span>
+                <span class="badge bg-secondary">Arduino</span>
+                <span class="badge bg-dark">Mobile Development</span>
               </div>
 
+              <h3>Project Timeline</h3>
               <p>
-                Impedit ipsum quae et aliquid doloribus et voluptatem quasi. Perspiciatis occaecati earum et magnam animi. Quibusdam non qui ea vitae suscipit vitae sunt. Repudiandae incidunt cumque minus deserunt assumenda tempore. Delectus voluptas necessitatibus est.
-              </p>
-
-              <p>
-                Sunt voluptatum sapiente facilis quo odio aut ipsum repellat debitis. Molestiae et autem libero. Explicabo et quod necessitatibus similique quis dolor eum. Numquam eaque praesentium rem et qui nesciunt.
+                This project was developed over a 2-week preparation period followed by an intensive 24-hour hackathon at
+                the Innovation Olympics. The tight timeline pushed our team to work efficiently and make quick decisions
+                while maintaining high-quality output.
               </p>
 
             </div>
@@ -157,14 +182,21 @@
 
           <div class="col-lg-3" data-aos="fade-up" data-aos-delay="100">
             <div class="portfolio-info">
-              <h3>Project information</h3>
+              <h3>Project Information</h3>
               <ul>
-                <li><strong>Category</strong> Web design</li>
-                <li><strong>Client</strong> ASU Company</li>
-                <li><strong>Project date</strong> 01 March, 2020</li>
-                <li><strong>Project URL</strong> <a href="#">www.example.com</a></li>
-                <li><a href="#" class="btn-visit align-self-start">Visit Website</a></li>
+                <li><strong>Category</strong> IoT Application</li>
+                <li><strong>Team Size</strong> 3 Members</li>
+                <li><strong>Duration</strong> 2 weeks + 24hr hackathon</li>
+                <li><strong>My Role</strong> Hipster (UX/Business)</li>
+                <li><strong>Technologies</strong> IoT, Flutter, Robotics, Sensors</li>
+                <li><strong>Event</strong> Innovation Olympics Hackathon</li>
+                <li><strong>Status</strong> Competition Winner</li>
               </ul>
+
+              <div class="d-grid gap-2 mt-4">
+                <a href="index.html#portfolio" class="btn-visit btn btn-primary">Back to Portfolio</a>
+                <a href="index.html#contact" class="btn-visit btn btn-outline-primary">Get In Touch</a>
+              </div>
             </div>
           </div>
 
@@ -178,24 +210,19 @@
 
   <footer id="footer" class="footer position-relative light-background">
     <div class="container">
-      <h3 class="sitename">Brandon Johnson</h3>
-      <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
+      <h3 class="sitename">Louise Marielle Dorado</h3>
+      <p>Student Developer & Creative Explorer passionate about technology and innovation.</p>
       <div class="social-links d-flex justify-content-center">
-        <a href=""><i class="bi bi-twitter-x"></i></a>
-        <a href=""><i class="bi bi-facebook"></i></a>
-        <a href=""><i class="bi bi-instagram"></i></a>
-        <a href=""><i class="bi bi-skype"></i></a>
-        <a href=""><i class="bi bi-linkedin"></i></a>
+        <a href="#"><i class="bi bi-github"></i></a>
+        <a href="#"><i class="bi bi-linkedin"></i></a>
+        <a href="#"><i class="bi bi-instagram"></i></a>
+        <a href="#"><i class="bi bi-facebook"></i></a>
       </div>
       <div class="container">
         <div class="copyright">
-          <span>Copyright</span> <strong class="px-1 sitename">Alex Smith</strong> <span>All Rights Reserved</span>
+          <span>Copyright</span> <strong class="px-1 sitename">MyResume</strong> <span>All Rights Reserved</span>
         </div>
         <div class="credits">
-          <!-- All the links in the footer should remain intact. -->
-          <!-- You can delete the links only if you've purchased the pro version. -->
-          <!-- Licensing information: https://bootstrapmade.com/license/ -->
-          <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
           Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
         </div>
       </div>
@@ -212,10 +239,8 @@
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
-  <script src="assets/vendor/typed.js/typed.umd.js"></script>
-  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
   <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
