--- a/MyResume/service-details.html
+++ b/MyResume/service-details.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Service Details - MyResume Bootstrap Template</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <title>Financial Management - Service Details</title>
+  <meta content="Comprehensive financial management solutions for individuals and businesses" name="description">
+  <meta content="Financial Management, Budgeting, Investment Planning, Financial Analysis" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -26,14 +26,6 @@
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
-
-  <!-- =======================================================
-  * Template Name: MyResume
-  * Template URL: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/
-  * Updated: Jun 29 2024 with Bootstrap v5.3.3
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body class="service-details-page">
@@ -44,12 +36,12 @@
 
     <nav id="navmenu" class="navmenu">
       <ul>
-        <li><a href="#hero"><i class="bi bi-house navicon"></i><span>Home</span></a></li>
-        <li><a href="#about"><i class="bi bi-person navicon"></i><span>About</span></a></li>
-        <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i><span>Resume</span></a></li>
-        <li><a href="#portfolio"><i class="bi bi-images navicon"></i><span>Portfolio</span></a></li>
-        <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i><span>Services</span></a></li>
-        <li><a href="#contact"><i class="bi bi-envelope navicon"></i><span>Contact</span></a></li>
+        <li><a href="index.html#hero"><i class="bi bi-house navicon"></i><span>Home</span></a></li>
+        <li><a href="index.html#about"><i class="bi bi-person navicon"></i><span>About</span></a></li>
+        <li><a href="index.html#resume"><i class="bi bi-file-earmark-text navicon"></i><span>Resume</span></a></li>
+        <li><a href="index.html#portfolio"><i class="bi bi-images navicon"></i><span>Portfolio</span></a></li>
+        <li><a href="index.html#services" class="active"><i class="bi bi-hdd-stack navicon"></i><span>Services</span></a></li>
+        <li><a href="index.html#contact"><i class="bi bi-envelope navicon"></i><span>Contact</span></a></li>
       </ul>
     </nav>
 
@@ -63,67 +55,183 @@
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">Service Details</li>
+            <li><a href="index.html#services">Services</a></li>
+            <li class="current">Financial Management</li>
           </ol>
         </nav>
-        <h1>Service Details</h1>
+        <h1>Financial Management Services</h1>
       </div>
     </div><!-- End Page Title -->
 
     <!-- Service Details Section -->
     <section id="service-details" class="service-details section">
 
-      <div class="container">
+      <div class="container" data-aos="fade-up">
 
         <div class="row gy-5">
 
-          <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
-
-            <div class="service-box">
-              <h4>Serices List</h4>
-              <div class="services-list">
-                <a href="#" class="active"><i class="bi bi-arrow-right-circle"></i><span>Web Design</span></a>
-                <a href="#"><i class="bi bi-arrow-right-circle"></i><span>Web Design</span></a>
-                <a href="#"><i class="bi bi-arrow-right-circle"></i><span>Product Management</span></a>
-                <a href="#"><i class="bi bi-arrow-right-circle"></i><span>Graphic Design</span></a>
-                <a href="#"><i class="bi bi-arrow-right-circle"></i><span>Marketing</span></a>
+          <div class="col-lg-8" data-aos="fade-up">
+            <div class="service-details-content">
+              
+              <div class="service-hero-image">
+                <img src="https://images.unsplash.com/photo-1554224155-6726b3ff858f?w=800&h=400&fit=crop" class="img-fluid" alt="Financial Management">
               </div>
-            </div><!-- End Services List -->
 
-            <div class="service-box">
-              <h4>Download Catalog</h4>
-              <div class="download-catalog">
-                <a href="#"><i class="bi bi-filetype-pdf"></i><span>Catalog PDF</span></a>
-                <a href="#"><i class="bi bi-file-earmark-word"></i><span>Catalog DOC</span></a>
+              <h2>Comprehensive Financial Management Solutions</h2>
+              <p>
+                Take control of your financial future with our comprehensive financial management services. Whether you're an individual looking to optimize your personal finances or a business seeking strategic financial guidance, we provide tailored solutions to meet your unique needs.
+              </p>
+
+              <h3>Our Financial Management Services</h3>
+              <p>
+                We offer a complete suite of financial management services designed to help you make informed decisions, maximize your financial potential, and achieve your long-term financial goals.
+              </p>
+
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="service-feature">
+                    <i class="bi bi-graph-up-arrow service-icon"></i>
+                    <h4>Investment Planning</h4>
+                    <p>Strategic investment advice and portfolio management to grow your wealth over time.</p>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="service-feature">
+                    <i class="bi bi-pie-chart service-icon"></i>
+                    <h4>Budget Analysis</h4>
+                    <p>Comprehensive budget analysis and optimization to maximize your financial efficiency.</p>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="service-feature">
+                    <i class="bi bi-calculator service-icon"></i>
+                    <h4>Tax Planning</h4>
+                    <p>Strategic tax planning and preparation to minimize liabilities and maximize savings.</p>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="service-feature">
+                    <i class="bi bi-shield-check service-icon"></i>
+                    <h4>Risk Assessment</h4>
+                    <p>Thorough risk analysis and mitigation strategies to protect your financial assets.</p>
+                  </div>
+                </div>
               </div>
-            </div><!-- End Services List -->
 
-            <div class="help-box d-flex flex-column justify-content-center align-items-center">
-              <i class="bi bi-headset help-icon"></i>
-              <h4>Have a Question?</h4>
-              <p class="d-flex align-items-center mt-2 mb-0"><i class="bi bi-telephone me-2"></i> <span>+1 5589 55488 55</span></p>
-              <p class="d-flex align-items-center mt-1 mb-0"><i class="bi bi-envelope me-2"></i> <a href="mailto:contact@example.com">contact@example.com</a></p>
+              <h3>Why Choose Our Financial Management Services?</h3>
+              <ul class="service-benefits">
+                <li><strong>Personalized Approach:</strong> Every financial plan is customized to your specific goals and circumstances</li>
+                <li><strong>Expert Analysis:</strong> Data-driven insights and professional expertise guide every recommendation</li>
+                <li><strong>Technology Integration:</strong> Modern tools and software for accurate tracking and reporting</li>
+                <li><strong>Ongoing Support:</strong> Continuous monitoring and adjustment of your financial strategy</li>
+                <li><strong>Transparent Communication:</strong> Clear explanations and regular updates on your financial progress</li>
+              </ul>
+
+              <h3>Our Process</h3>
+              <div class="service-process">
+                <div class="process-step">
+                  <div class="step-number">1</div>
+                  <div class="step-content">
+                    <h4>Initial Consultation</h4>
+                    <p>We begin with a comprehensive review of your current financial situation and goals.</p>
+                  </div>
+                </div>
+                <div class="process-step">
+                  <div class="step-number">2</div>
+                  <div class="step-content">
+                    <h4>Analysis & Planning</h4>
+                    <p>Detailed analysis of your finances and creation of a customized financial strategy.</p>
+                  </div>
+                </div>
+                <div class="process-step">
+                  <div class="step-number">3</div>
+                  <div class="step-content">
+                    <h4>Implementation</h4>
+                    <p>Strategic implementation of your financial plan with careful monitoring and guidance.</p>
+                  </div>
+                </div>
+                <div class="process-step">
+                  <div class="step-number">4</div>
+                  <div class="step-content">
+                    <h4>Ongoing Management</h4>
+                    <p>Regular reviews and adjustments to ensure your financial plan stays on track.</p>
+                  </div>
+                </div>
+              </div>
+
+              <h3>Client Success Stories</h3>
+              <div class="testimonial-box">
+                <blockquote>
+                  "The financial management service completely transformed how I handle my finances. Within six months, I was able to optimize my budget and start building a solid investment portfolio."
+                </blockquote>
+                <cite>- Sarah J., Small Business Owner</cite>
+              </div>
+
             </div>
-
           </div>
 
-          <div class="col-lg-8 ps-lg-5" data-aos="fade-up" data-aos-delay="200">
-            <img src="assets/img/services.jpg" alt="" class="img-fluid services-img">
-            <h3>Temporibus et in vero dicta aut eius lidero plastis trand lined voluptas dolorem ut voluptas</h3>
-            <p>
-              Blanditiis voluptate odit ex error ea sed officiis deserunt. Cupiditate non consequatur et doloremque consequuntur. Accusantium labore reprehenderit error temporibus saepe perferendis fuga doloribus vero. Qui omnis quo sit. Dolorem architecto eum et quos deleniti officia qui.
-            </p>
-            <ul>
-              <li><i class="bi bi-check-circle"></i> <span>Aut eum totam accusantium voluptatem.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Assumenda et porro nisi nihil nesciunt voluptatibus.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea</span></li>
-            </ul>
-            <p>
-              Est reprehenderit voluptatem necessitatibus asperiores neque sed ea illo. Deleniti quam sequi optio iste veniam repellat odit. Aut pariatur itaque nesciunt fuga.
-            </p>
-            <p>
-              Sunt rem odit accusantium omnis perspiciatis officia. Laboriosam aut consequuntur recusandae mollitia doloremque est architecto cupiditate ullam. Quia est ut occaecati fuga. Distinctio ex repellendus eveniet velit sint quia sapiente cumque. Et ipsa perferendis ut nihil. Laboriosam vel voluptates tenetur nostrum. Eaque iusto cupiditate et totam et quia dolorum in. Sunt molestiae ipsum at consequatur vero. Architecto ut pariatur autem ad non cumque nesciunt qui maxime. Sunt eum quia impedit dolore alias explicabo ea.
-            </p>
+          <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
+            <div class="service-info">
+              <h3>Service Information</h3>
+              <div class="service-details-list">
+                <div class="service-item">
+                  <i class="bi bi-clock"></i>
+                  <div>
+                    <strong>Consultation Duration:</strong>
+                    <span>1-2 Hours Initial Meeting</span>
+                  </div>
+                </div>
+                <div class="service-item">
+                  <i class="bi bi-calendar"></i>
+                  <div>
+                    <strong>Availability:</strong>
+                    <span>Monday - Friday, 9 AM - 6 PM</span>
+                  </div>
+                </div>
+                <div class="service-item">
+                  <i class="bi bi-currency-dollar"></i>
+                  <div>
+                    <strong>Starting Price:</strong>
+                    <span>Contact for Pricing</span>
+                  </div>
+                </div>
+                <div class="service-item">
+                  <i class="bi bi-people"></i>
+                  <div>
+                    <strong>Client Types:</strong>
+                    <span>Individuals & Businesses</span>
+                  </div>
+                </div>
+                <div class="service-item">
+                  <i class="bi bi-globe"></i>
+                  <div>
+                    <strong>Service Area:</strong>
+                    <span>Local & Remote Consultations</span>
+                  </div>
+                </div>
+              </div>
+
+              <div class="service-cta">
+                <h4>Ready to Take Control of Your Finances?</h4>
+                <p>Schedule a consultation today and start your journey toward financial success.</p>
+                <div class="d-grid gap-2">
+                  <a href="index.html#contact" class="btn btn-primary">Get Started</a>
+                  <a href="index.html#services" class="btn btn-outline-primary">View All Services</a>
+                </div>
+              </div>
+
+              <div class="service-contact">
+                <h4>Have Questions?</h4>
+                <div class="contact-item">
+                  <i class="bi bi-envelope"></i>
+                  <span>info@example.com</span>
+                </div>
+                <div class="contact-item">
+                  <i class="bi bi-phone"></i>
+                  <span>+1 (555) 123-4567</span>
+                </div>
+              </div>
+            </div>
           </div>
 
         </div>
@@ -136,24 +244,19 @@
 
   <footer id="footer" class="footer position-relative light-background">
     <div class="container">
-      <h3 class="sitename">Brandon Johnson</h3>
-      <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
+      <h3 class="sitename">Louise Marielle Dorado</h3>
+      <p>Student Developer & Creative Explorer passionate about technology and innovation.</p>
       <div class="social-links d-flex justify-content-center">
-        <a href=""><i class="bi bi-twitter-x"></i></a>
-        <a href=""><i class="bi bi-facebook"></i></a>
-        <a href=""><i class="bi bi-instagram"></i></a>
-        <a href=""><i class="bi bi-skype"></i></a>
-        <a href=""><i class="bi bi-linkedin"></i></a>
+        <a href="#"><i class="bi bi-github"></i></a>
+        <a href="#"><i class="bi bi-linkedin"></i></a>
+        <a href="#"><i class="bi bi-instagram"></i></a>
+        <a href="#"><i class="bi bi-facebook"></i></a>
       </div>
       <div class="container">
         <div class="copyright">
-          <span>Copyright</span> <strong class="px-1 sitename">Alex Smith</strong> <span>All Rights Reserved</span>
+          <span>Copyright</span> <strong class="px-1 sitename">MyResume</strong> <span>All Rights Reserved</span>
         </div>
         <div class="credits">
-          <!-- All the links in the footer should remain intact. -->
-          <!-- You can delete the links only if you've purchased the pro version. -->
-          <!-- Licensing information: https://bootstrapmade.com/license/ -->
-          <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
           Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
         </div>
       </div>
@@ -170,10 +273,8 @@
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
-  <script src="assets/vendor/typed.js/typed.umd.js"></script>
-  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
   <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
